[workspace]
resolver = "2"

members = [
    "api",
    "api/openapi-spec-generator",
    "api/test-context",
    "api/types",
    "accudo-move/accudo-abstract-gas-usage",
    "accudo-move/accudo-aggregator",
    "accudo-move/accudo-debugger",
    "accudo-move/accudo-e2e-comparison-testing",
    "accudo-move/accudo-gas-algebra",
    "accudo-move/accudo-gas-calibration",
    "accudo-move/accudo-gas-meter",
    "accudo-move/accudo-gas-profiling",
    "accudo-move/accudo-gas-schedule",
    "accudo-move/accudo-gas-schedule-updator",
    "accudo-move/accudo-memory-usage-tracker",
    "accudo-move/accudo-native-interface",
    "accudo-move/accudo-release-builder",
    "accudo-move/accudo-resource-viewer",
    "accudo-move/accudo-sdk-builder",
    "accudo-move/accudo-transaction-benchmarks",
    "accudo-move/accudo-transaction-simulation",
    "accudo-move/accudo-transaction-simulation-session",
    "accudo-move/accudo-transactional-test-harness",
    "accudo-move/accudo-validator-interface",
    "accudo-move/accudo-vm",
    "accudo-move/accudo-vm-benchmarks",
    "accudo-move/accudo-vm-environment",
    "accudo-move/accudo-vm-logging",
    "accudo-move/accudo-vm-profiling",
    "accudo-move/accudo-vm-types",
    "accudo-move/accudo-workspace-server",
    "accudo-move/block-executor",
    "accudo-move/e2e-benchmark",
    "accudo-move/e2e-move-tests",
    "accudo-move/e2e-tests",
    "accudo-move/e2e-testsuite",
    "accudo-move/framework",
    "accudo-move/framework/cached-packages",
    "accudo-move/framework/table-natives",
    "accudo-move/move-examples",
    "accudo-move/mvhashmap",
    "accudo-move/package-builder",
    "accudo-move/replay-benchmark",
    "accudo-move/script-composer",
    "accudo-move/vm-genesis",
    "accudo-node",
    "config",
    "config/global-constants",
    "consensus",
    "consensus/consensus-types",
    "consensus/safety-rules",
    "crates/accudo",
    "crates/accudo-admin-service",
    "crates/accudo-api-tester",
    "crates/accudo-bcs-utils",
    "crates/accudo-bitvec",
    "crates/accudo-build-info",
    "crates/accudo-collections",
    "crates/accudo-compression",
    "crates/accudo-crypto",
    "crates/accudo-crypto-derive",
    "crates/accudo-debugger",
    "crates/accudo-dkg",
    "crates/accudo-drop-helper",
    "crates/accudo-enum-conversion-derive",
    "crates/accudo-faucet/cli",
    "crates/accudo-faucet/core",
    "crates/accudo-faucet/metrics-server",
    "crates/accudo-faucet/service",
    "crates/accudo-genesis",
    "crates/accudo-github-client",
    "crates/accudo-id-generator",
    "crates/accudo-in-memory-cache",
    "crates/accudo-infallible",
    "crates/accudo-inspection-service",
    "crates/accudo-jwk-consensus",
    "crates/accudo-keygen",
    "crates/accudo-ledger",
    "crates/accudo-localnet",
    "crates/accudo-log-derive",
    "crates/accudo-logger",
    "crates/accudo-metrics-core",
    "crates/accudo-network-checker",
    "crates/accudo-node-identity",
    "crates/accudo-openapi",
    "crates/accudo-profiler",
    "crates/accudo-proptest-helpers",
    "crates/accudo-push-metrics",
    "crates/accudo-rate-limiter",
    "crates/accudo-rest-client",
    "crates/accudo-retrier",
    "crates/accudo-rosetta",
    "crates/accudo-rosetta-cli",
    "crates/accudo-runtimes",
    "crates/accudo-speculative-state-helper",
    "crates/accudo-system-utils",
    "crates/accudo-telemetry",
    "crates/accudo-telemetry-service",
    "crates/accudo-temppath",
    "crates/accudo-time-service",
    "crates/accudo-transaction-filters",
    "crates/accudo-warp-webserver",
    "crates/bounded-executor",
    "crates/channel",
    "crates/crash-handler",
    "crates/fallible",
    "crates/indexer",
    "crates/jwk-utils",
    "crates/node-resource-metrics",
    "crates/num-variants",
    "crates/proxy",
    "crates/reliable-broadcast",
    "crates/short-hex-str",
    "crates/transaction-emitter",
    "crates/transaction-emitter-lib",
    "crates/transaction-generator-lib",
    "crates/transaction-workloads-lib",
    "crates/validator-transaction-pool",
    "devtools/accudo-cargo-cli",
    "dkg",
    "ecosystem/indexer-grpc/indexer-grpc-cache-worker",
    "ecosystem/indexer-grpc/indexer-grpc-data-service",
    "ecosystem/indexer-grpc/indexer-grpc-data-service-v2",
    "ecosystem/indexer-grpc/indexer-grpc-file-checker",
    "ecosystem/indexer-grpc/indexer-grpc-file-store",
    "ecosystem/indexer-grpc/indexer-grpc-file-store-backfiller",
    "ecosystem/indexer-grpc/indexer-grpc-fullnode",
    "ecosystem/indexer-grpc/indexer-grpc-gateway",
    "ecosystem/indexer-grpc/indexer-grpc-in-memory-cache-benchmark",
    "ecosystem/indexer-grpc/indexer-grpc-manager",
    "ecosystem/indexer-grpc/indexer-grpc-server-framework",
    "ecosystem/indexer-grpc/indexer-grpc-table-info",
    "ecosystem/indexer-grpc/indexer-grpc-utils",
    "ecosystem/indexer-grpc/indexer-grpc-v2-file-store-backfiller",
    "ecosystem/indexer-grpc/indexer-test-transactions",
    "ecosystem/indexer-grpc/indexer-transaction-generator",
    "ecosystem/indexer-grpc/transaction-filter",
    "ecosystem/nft-metadata-crawler",
    "ecosystem/node-checker",
    "ecosystem/node-checker/fn-check-client",
    "execution/block-partitioner",
    "execution/executor",
    "execution/executor-benchmark",
    "execution/executor-service",
    "execution/executor-test-helpers",
    "execution/executor-types",
    "experimental/bulk-txn-submit",
    "experimental/execution/ptx-executor",
    "experimental/runtimes",
    "experimental/storage/hexy",
    "experimental/storage/layered-map",
    "keyless/pepper/common",
    "keyless/pepper/example-client-rust",
    "keyless/pepper/service",
    "mempool",
    "network/benchmark",
    "network/builder",
    "network/discovery",
    "network/framework",
    "network/memsocket",
    "network/netcore",
    "peer-monitoring-service/client",
    "peer-monitoring-service/server",
    "peer-monitoring-service/types",
    "protos/rust",
    "sdk",
    "secure/net",
    "secure/storage",
    "secure/storage/vault",
    "state-sync/accudo-data-client",
    "state-sync/data-streaming-service",
    "state-sync/inter-component/consensus-notifications",
    "state-sync/inter-component/event-notifications",
    "state-sync/inter-component/mempool-notifications",
    "state-sync/inter-component/storage-service-notifications",
    "state-sync/state-sync-driver",
    "state-sync/storage-service/client",
    "state-sync/storage-service/server",
    "state-sync/storage-service/types",
    "storage/accumulator",
    "storage/accudodb",
    "storage/backup/backup-cli",
    "storage/backup/backup-service",
    "storage/db-tool",
    "storage/indexer",
    "storage/indexer_schemas",
    "storage/jellyfish-merkle",
    "storage/rocksdb-options",
    "storage/schemadb",
    "storage/scratchpad",
    "storage/storage-interface",
    "testsuite/benchmark-workloads/package-generator",
    "testsuite/forge",
    "testsuite/forge-cli",
    "testsuite/fuzzer",
    "testsuite/fuzzer/fuzz",
    "testsuite/generate-format",
    "testsuite/smoke-test",
    "testsuite/testcases",
    "third_party/move/extensions/move-table-extension",
    "third_party/move/move-binary-format",
    "third_party/move/move-binary-format/serializer-tests",
    "third_party/move/move-borrow-graph",
    "third_party/move/move-bytecode-spec",
    "third_party/move/move-bytecode-verifier",
    "third_party/move/move-bytecode-verifier/bytecode-verifier-tests",
    "third_party/move/move-bytecode-verifier/fuzz",
    "third_party/move/move-bytecode-verifier/invalid-mutations",
    "third_party/move/move-bytecode-verifier/transactional-tests",
    "third_party/move/move-command-line-common",
    "third_party/move/move-compiler-v2",
    "third_party/move/move-compiler-v2/legacy-move-compiler",
    "third_party/move/move-compiler-v2/transactional-tests",
    "third_party/move/move-core/types",
    "third_party/move/move-examples",
    "third_party/move/move-ir-compiler",
    "third_party/move/move-ir-compiler/move-bytecode-source-map",
    "third_party/move/move-ir-compiler/move-ir-to-bytecode",
    "third_party/move/move-ir-compiler/move-ir-to-bytecode/syntax",
    "third_party/move/move-ir-compiler/transactional-tests",
    "third_party/move/move-ir/types",
    "third_party/move/move-model",
    "third_party/move/move-model/bytecode",
    "third_party/move/move-model/bytecode-test-utils",
    "third_party/move/move-model/bytecode/ast-generator-tests",
    "third_party/move/move-prover",
    "third_party/move/move-prover/boogie-backend",
    "third_party/move/move-prover/bytecode-pipeline",
    "third_party/move/move-prover/lab",
    "third_party/move/move-prover/move-abigen",
    "third_party/move/move-prover/move-docgen",
    "third_party/move/move-prover/move-errmapgen",
    "third_party/move/move-prover/test-utils",
    "third_party/move/move-symbol-pool",
    "third_party/move/move-vm/integration-tests",
    "third_party/move/move-vm/metrics",
    "third_party/move/move-vm/runtime",
    "third_party/move/move-vm/test-utils",
    "third_party/move/move-vm/transactional-tests",
    "third_party/move/move-vm/types",
    "third_party/move/testing-infra/transactional-test-runner",
    "third_party/move/tools/move-asm",
    "third_party/move/tools/move-bytecode-utils",
    "third_party/move/tools/move-bytecode-viewer",
    "third_party/move/tools/move-cli",
    "third_party/move/tools/move-coverage",
    "third_party/move/tools/move-decompiler",
    "third_party/move/tools/move-disassembler",
    "third_party/move/tools/move-linter",
    "third_party/move/tools/move-package",
    "third_party/move/tools/move-package-cache",
    "third_party/move/tools/move-package-manifest",
    "third_party/move/tools/move-package-resolver",
    "third_party/move/tools/move-resource-viewer",
    "third_party/move/tools/move-unit-test",
    "tools/calc-dep-sizes",
    "tools/compute-module-expansion-size",
    "types",
    "vm-validator",
]

# NOTE: default-members is the complete list of binaries that form the "production Accudo codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "accudo-node",
    "consensus/safety-rules",
    "crates/accudo",
    "crates/accudo-debugger",
    "crates/accudo-faucet/service",
    "crates/accudo-keygen",
    "crates/accudo-rate-limiter",
    "crates/accudo-rosetta",
    "crates/transaction-emitter",
    "accudo-move/framework",
    "storage/backup/backup-cli",
    "ecosystem/node-checker",
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Accudo Labs <opensource@accudo.org>"]
edition = "2024"
homepage = "https://accudo.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/accudo-labs/accudo-core"
rust-version = "1.85"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
accudo = { path = "crates/accudo" }
accudo-accumulator = { path = "storage/accumulator" }
accudo-admin-service = { path = "crates/accudo-admin-service" }
accudo-aggregator = { path = "accudo-move/accudo-aggregator" }
accudo-api = { path = "api" }
accudo-api-test-context = { path = "api/test-context" }
accudo-api-types = { path = "api/types" }
accudo-backup-cli = { path = "storage/backup/backup-cli" }
accudo-backup-service = { path = "storage/backup/backup-service" }
accudo-bcs-utils = { path = "crates/accudo-bcs-utils" }
accudo-bounded-executor = { path = "crates/bounded-executor" }
accudo-block-executor = { path = "accudo-move/block-executor" }
accudo-bitvec = { path = "crates/accudo-bitvec" }
accudo-build-info = { path = "crates/accudo-build-info" }
accudo-cached-packages = { path = "accudo-move/framework/cached-packages" }
accudo-channels = { path = "crates/channel" }
accudo-cli-common = { path = "crates/accudo-cli-common" }
accudo-collections = { path = "crates/accudo-collections" }
accudo-compression = { path = "crates/accudo-compression" }
accudo-consensus = { path = "consensus" }
accudo-consensus-notifications = { path = "state-sync/inter-component/consensus-notifications" }
accudo-consensus-types = { path = "consensus/consensus-types" }
accudo-config = { path = "config" }
accudo-crash-handler = { path = "crates/crash-handler" }
accudo-crypto = { path = "crates/accudo-crypto" }
accudo-crypto-derive = { path = "crates/accudo-crypto-derive" }
accudo-data-client = { path = "state-sync/accudo-data-client" }
accudo-data-streaming-service = { path = "state-sync/data-streaming-service" }
accudo-db = { path = "storage/accudodb" }
accudo-db-indexer = { path = "storage/indexer" }
accudo-db-indexer-schemas = { path = "storage/indexer_schemas" }
accudo-db-tool = { path = "storage/db-tool" }
accudo-debugger = { path = "crates/accudo-debugger" }
accudo-dkg = { path = "crates/accudo-dkg" }
accudo-dkg-runtime = { path = "dkg" }
accudo-drop-helper = { path = "crates/accudo-drop-helper" }
accudo-event-notifications = { path = "state-sync/inter-component/event-notifications" }
accudo-executor = { path = "execution/executor" }
accudo-block-partitioner = { path = "execution/block-partitioner" }
accudo-enum-conversion-derive = { path = "crates/accudo-enum-conversion-derive" }
accudo-executor-service = { path = "execution/executor-service" }
accudo-executor-test-helpers = { path = "execution/executor-test-helpers" }
accudo-executor-types = { path = "execution/executor-types" }
accudo-experimental-hexy = { path = "experimental/storage/hexy" }
accudo-experimental-bulk-txn-submit = { path = "experimental/bulk-txn-submit" }
accudo-experimental-layered-map = { path = "experimental/storage/layered-map" }
accudo-experimental-ptx-executor = { path = "experimental/execution/ptx-executor" }
accudo-experimental-runtimes = { path = "experimental/runtimes" }
accudo-faucet-cli = { path = "crates/accudo-faucet/cli" }
accudo-faucet-core = { path = "crates/accudo-faucet/core" }
accudo-faucet-service = { path = "crates/accudo-faucet/service" }
accudo-faucet-metrics-server = { path = "crates/accudo-faucet/metrics-server" }
accudo-fallible = { path = "crates/fallible" }
accudo-forge = { path = "testsuite/forge" }
accudo-framework = { path = "accudo-move/framework" }
fuzzer = { path = "testsuite/fuzzer" }
accudo-abstract-gas-usage = { path = "accudo-move/accudo-abstract-gas-usage" }
accudo-gas-meter = { path = "accudo-move/accudo-gas-meter" }
accudo-gas-algebra = { path = "accudo-move/accudo-gas-algebra" }
accudo-gas-calibration = { path = "accudo-move/accudo-gas-calibration" }
accudo-gas-profiling = { path = "accudo-move/accudo-gas-profiling" }
accudo-gas-schedule = { path = "accudo-move/accudo-gas-schedule" }
accudo-gas-schedule-updator = { path = "accudo-move/accudo-gas-schedule-updator" }
accudo-genesis = { path = "crates/accudo-genesis" }
accudo-github-client = { path = "crates/accudo-github-client" }
accudo-global-constants = { path = "config/global-constants" }
accudo-id-generator = { path = "crates/accudo-id-generator" }
accudo-in-memory-cache = { path = "crates/accudo-in-memory-cache" }
accudo-indexer = { path = "crates/indexer" }
accudo-indexer-grpc-cache-worker = { path = "ecosystem/indexer-grpc/indexer-grpc-cache-worker" }
accudo-indexer-grpc-data-service = { path = "ecosystem/indexer-grpc/indexer-grpc-data-service" }
accudo-indexer-grpc-data-service-v2 = { path = "ecosystem/indexer-grpc/indexer-grpc-data-service-v2" }
accudo-indexer-grpc-file-store = { path = "ecosystem/indexer-grpc/indexer-grpc-file-store" }
accudo-indexer-grpc-file-checker = { path = "ecosystem/indexer-grpc/indexer-grpc-file-checker" }
accudo-indexer-grpc-file-store-backfiller = { path = "ecosystem/indexer-grpc/indexer-grpc-file-store-backfiller" }
accudo-indexer-grpc-fullnode = { path = "ecosystem/indexer-grpc/indexer-grpc-fullnode" }
accudo-indexer-grpc-gateway = { path = "ecosystem/indexer-grpc/indexer-grpc-gateway" }
accudo-indexer-grpc-in-memory-cache-benchmark = { path = "ecosystem/indexer-grpc/indexer-grpc-in-memory-cache-benchmark" }
accudo-indexer-grpc-manager = { path = "ecosystem/indexer-grpc/indexer-grpc-manager" }
accudo-indexer-grpc-table-info = { path = "ecosystem/indexer-grpc/indexer-grpc-table-info" }
accudo-indexer-test-transactions = { path = "ecosystem/indexer-grpc/indexer-test-transactions" }
accudo-indexer-grpc-utils = { path = "ecosystem/indexer-grpc/indexer-grpc-utils" }
accudo-indexer-grpc-v2-file-store-backfiller = { path = "ecosystem/indexer-grpc/indexer-grpc-v2-file-store-backfiller" }
accudo-indexer-grpc-server-framework = { path = "ecosystem/indexer-grpc/indexer-grpc-server-framework" }
accudo-indexer-transaction-generator = { path = "ecosystem/indexer-grpc/indexer-transaction-generator" }
accudo-infallible = { path = "crates/accudo-infallible" }
accudo-inspection-service = { path = "crates/accudo-inspection-service" }
accudo-jellyfish-merkle = { path = "storage/jellyfish-merkle" }
accudo-jwk-consensus = { path = "crates/accudo-jwk-consensus" }
accudo-jwk-utils = { path = "crates/jwk-utils" }
accudo-keygen = { path = "crates/accudo-keygen" }
accudo-language-e2e-tests = { path = "accudo-move/e2e-tests" }
accudo-ledger = { path = "crates/accudo-ledger" }
accudo-localnet = { path = "crates/accudo-localnet" }
accudo-log-derive = { path = "crates/accudo-log-derive" }
accudo-logger = { path = "crates/accudo-logger" }
accudo-memory-usage-tracker = { path = "accudo-move/accudo-memory-usage-tracker" }
accudo-mempool = { path = "mempool" }
accudo-mempool-notifications = { path = "state-sync/inter-component/mempool-notifications" }
accudo-memsocket = { path = "network/memsocket" }
accudo-metrics-core = { path = "crates/accudo-metrics-core" }
accudo-move-debugger = { path = "accudo-move/accudo-debugger" }
accudo-move-examples = { path = "accudo-move/move-examples" }
accudo-move-e2e-benchmark = { path = "accudo-move/e2e-benchmark" }
accudo-mvhashmap = { path = "accudo-move/mvhashmap" }
accudo-native-interface = { path = "accudo-move/accudo-native-interface" }
accudo-netcore = { path = "network/netcore" }
accudo-network = { path = "network/framework" }
accudo-network-benchmark = { path = "network/benchmark" }
accudo-network-builder = { path = "network/builder" }
accudo-network-checker = { path = "crates/accudo-network-checker" }
accudo-network-discovery = { path = "network/discovery" }
accudo-nft-metadata-crawler = { path = "ecosystem/nft-metadata-crawler" }
accudo-node = { path = "accudo-node" }
accudo-node-checker = { path = "ecosystem/node-checker" }
accudo-node-identity = { path = "crates/accudo-node-identity" }
accudo-node-resource-metrics = { path = "crates/node-resource-metrics" }
accudo-num-variants = { path = "crates/num-variants" }
accudo-openapi = { path = "crates/accudo-openapi" }
accudo-package-builder = { path = "accudo-move/package-builder" }
accudo-peer-monitoring-service-client = { path = "peer-monitoring-service/client" }
accudo-peer-monitoring-service-server = { path = "peer-monitoring-service/server" }
accudo-peer-monitoring-service-types = { path = "peer-monitoring-service/types" }
accudo-keyless-common = { path = "keyless/common" }
accudo-keyless-pepper-common = { path = "keyless/pepper/common" }
accudo-keyless-pepper-service = { path = "keyless/pepper/service" }
accudo-profiler = { path = "crates/accudo-profiler" }
accudo-proptest-helpers = { path = "crates/accudo-proptest-helpers" }
accudo-protos = { path = "protos/rust" }
accudo-proxy = { path = "crates/proxy" }
accudo-push-metrics = { path = "crates/accudo-push-metrics" }
accudo-rate-limiter = { path = "crates/accudo-rate-limiter" }
accudo-release-builder = { path = "accudo-move/accudo-release-builder" }
accudo-reliable-broadcast = { path = "crates/reliable-broadcast" }
accudo-replay-benchmark = { path = "accudo-move/replay-benchmark" }
accudo-resource-viewer = { path = "accudo-move/accudo-resource-viewer" }
accudo-rest-client = { path = "crates/accudo-rest-client" }
accudo-retrier = { path = "crates/accudo-retrier" }
accudo-rocksdb-options = { path = "storage/rocksdb-options" }
accudo-rosetta = { path = "crates/accudo-rosetta" }
accudo-runtimes = { path = "crates/accudo-runtimes" }
accudo-safety-rules = { path = "consensus/safety-rules" }
accudo-schemadb = { path = "storage/schemadb" }
accudo-scratchpad = { path = "storage/scratchpad" }
accudo-script-composer = { path = "accudo-move/script-composer" }
accudo-sdk = { path = "sdk" }
accudo-sdk-builder = { path = "accudo-move/accudo-sdk-builder" }
accudo-secure-net = { path = "secure/net" }
accudo-secure-storage = { path = "secure/storage" }
accudo-short-hex-str = { path = "crates/short-hex-str" }
accudo-speculative-state-helper = { path = "crates/accudo-speculative-state-helper" }
accudo-state-sync-driver = { path = "state-sync/state-sync-driver" }
accudo-storage-interface = { path = "storage/storage-interface" }
accudo-storage-service-client = { path = "state-sync/storage-service/client" }
accudo-storage-service-notifications = { path = "state-sync/inter-component/storage-service-notifications" }
accudo-storage-service-types = { path = "state-sync/storage-service/types" }
accudo-storage-service-server = { path = "state-sync/storage-service/server" }
accudo-system-utils = { path = "crates/accudo-system-utils" }
accudo-transaction-filter = { path = "ecosystem/indexer-grpc/transaction-filter" }
accudo-transaction-filters = { path = "crates/accudo-transaction-filters" }
accudo-telemetry = { path = "crates/accudo-telemetry" }
accudo-telemetry-service = { path = "crates/accudo-telemetry-service" }
accudo-temppath = { path = "crates/accudo-temppath" }
accudo-testcases = { path = "testsuite/testcases" }
accudo-time-service = { path = "crates/accudo-time-service", features = [
    "async",
] }
accudo-transaction-emitter-lib = { path = "crates/transaction-emitter-lib" }
accudo-transaction-generator-lib = { path = "crates/transaction-generator-lib" }
accudo-transaction-workloads-lib = { path = "crates/transaction-workloads-lib" }
accudo-transaction-simulation = { path = "accudo-move/accudo-transaction-simulation" }
accudo-transaction-simulation-session = { path = "accudo-move/accudo-transaction-simulation-session" }
accudo-transactional-test-harness = { path = "accudo-move/accudo-transactional-test-harness" }
accudo-types = { path = "types" }
accudo-validator-interface = { path = "accudo-move/accudo-validator-interface" }
accudo-validator-transaction-pool = { path = "crates/validator-transaction-pool" }
accudo-vault-client = { path = "secure/storage/vault" }
accudo-vm = { path = "accudo-move/accudo-vm" }
accudo-vm-environment = { path = "accudo-move/accudo-vm-environment" }
accudo-vm-logging = { path = "accudo-move/accudo-vm-logging" }
accudo-vm-genesis = { path = "accudo-move/vm-genesis" }
accudo-vm-types = { path = "accudo-move/accudo-vm-types" }
accudo-vm-validator = { path = "vm-validator" }
accudo-workspace-server = { path = "accudo-move/accudo-workspace-server" }
accudo-warp-webserver = { path = "crates/accudo-warp-webserver" }
accudo-cargo-cli = { path = "devtools/accudo-cargo-cli" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
aes-gcm = "0.10.3"
ahash = { version = "0.8.11", features = ["serde"] }
atty = "0.2.14"
nalgebra = "0.32"
float-cmp = "0.9.0"
again = "0.1.2"
ambassador = "0.4.1"
annotate-snippets = "0.11.5"
anyhow = "1.0.98"
anstyle = "1.0.1"
arbitrary = { version = "1.4.1", features = ["derive"] }
arc-swap = "1.6.0"
arr_macro = "0.2.1"
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-poly = "0.5.0"
ark-relations = "0.5.0"
ark-serialize = { version = "0.5.0", features = ["derive"] }
ark-std = { version = "0.5.0", features = ["getrandom"] }
accudo-indexer-processor-sdk = { git = "https://github.com/accudo-labs/accudo-indexer-processor-sdk.git", tag = "accudo-indexer-processor-sdk-v2.1.2", features = [
    "postgres_partial",
] }
accudo-moving-average = { git = "https://github.com/accudo-labs/accudo-indexer-processors.git", rev = "62beedc881d1b76632318ceb186ee9065236468e" }
assert_approx_eq = "1.1.0"
async-channel = "1.7.1"
async-mutex = "1.4.0"
async-recursion = "1.0.5"
async-trait = "0.1.53"
axum = "0.7.5"
base64 = "0.13.0"
backoff = { version = "0.4.0", features = ["tokio"] }
backtrace = "0.3.58"
bcs = { git = "https://github.com/accudo-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
better_any = "0.1.1"
bigdecimal = { version = "0.4.0", features = ["serde"] }
version-compare = "0.1.1"
bitvec = "1.0.1"
blake2 = "0.10.4"
blake2-rfc = "0.2.18"
bls12_381 = "0.8.0"
blst = "0.3.15"
# The __private_bench feature exposes the Fp12 type which we need to implement a multi-threaded multi-pairing.
blstrs = { version = "0.7.1", features = ["serde", "__private_bench"] }
bollard = "0.15"
build_html = "2.5.0"
bulletproofs = { version = "4.0.0" }
byteorder = "1.4.3"
bytes = { version = "1.4.0", features = ["serde"] }
bytesize = { version = "1.3.0" }
camino = { version = "1.1.6" }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
chrono-tz = "0.10.1"
cfg-if = "1.0.0"
ciborium = "0.2"
claims = "0.7"
clap = { version = "4.3.9", features = [
    "derive",
    "env",
    "unstable-styles",
    "wrap_help",
] }
clap-verbosity-flag = "2.1.1"
clap_complete = "4.4.1"
cloud-storage = { version = "0.11.1", features = [
    "global-client",
    "rustls-tls",
], default-features = false }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
colored = "2.0.0"
concurrent-queue = "2.2.0"
console-subscriber = "0.3.0"
core_affinity = "0.8.1"
coset = "0.3"
criterion = "0.3.5"
criterion-cpu-time = "0.1.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
crossterm = "0.26.1"
csv = "1.2.1"
curve25519-dalek = "3"
curve25519-dalek-ng = "4"
dashmap = { version = "7.0.0-rc2", features = ["inline-more"] }
datatest-stable = "0.1.1"
debug-ignore = { version = "1.0.3", features = ["serde"] }
derivative = "2.2.0"
derivation-path = "0.2.0"
derive_builder = "0.20.0"
determinator = "0.12.0"
derive_more = "0.99.11"
diesel = { version = "2.2.0", features = ["uuid"] }
# Use the crate version once this feature gets released on crates.io:
# https://github.com/weiznich/diesel_async/commit/e165e8c96a6c540ebde2d6d7c52df5c5620a4bf1
diesel-async = { git = "https://github.com/weiznich/diesel_async.git", rev = "e3beac66cd41ab53d78a10328bb72f272103e5d1", features = [
    "async-connection-wrapper",
    "postgres",
    "bb8",
    "tokio",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
difference = "2.0.0"
digest = "0.9.0"
dir-diff = "0.3.2"
dirs = "5.0.1"
dirs-next = "2.0.0"
dudect-bencher = "0.6"
dunce = "1.0.4"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
ed25519-dalek-bip32 = "0.2.0"
either = "1.6.1"
enum_dispatch = "0.3.12"
env_logger = "0.10.0"
equivalent = "1.0"
erased-serde = "0.3.13"
ethnum = "1.5.2"
ethers = { version = "2" }
dearbitrary = { version = "1.0.4", features = ["derive"] }
fail = "0.5.0"
ff = { version = "0.13", features = ["derive"] }
field_count = "0.1.1"
figment = { version = "0.10.19", features = ["yaml", "env"] }
file_diff = "1.0.0"
firebase-token = { git = "https://github.com/accudo-labs/firebase-token", rev = "34ea512d3d1fad6c11df3e7d82ff72beccc05836" }
firestore = "0.43.0"
fixed = "1.25.1"
flate2 = "1.0.24"
flexi_logger = "0.27.4"
futures = "0.3.29"
futures-channel = "0.3.29"
futures-core = "0.3.29"
futures-util = "0.3.29"
fxhash = "0.2.1"
fs2 = "0.4.3"
getrandom = "0.2.2"
gcp-bigquery-client = "0.16.8"
get_if_addrs = "0.5.3"
get-size = { version = "0.1.4", features = ["derive"] }
git2 = "0.16.1"
glob = "0.3.0"
goldenfile = "1.5.2"
google-cloud-storage = "0.13.0"
group = "0.13"
guppy = "0.17.5"
handlebars = "4.2.2"
hashbrown = "0.14.3"
heck = "0.4.1"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.3.4"
hkdf = "0.10.0"
hmac = "0.12.0"
hostname = "0.3.1"
http = "0.2.9"
http-body-util = "0.1.1"
httpmock = "0.6.8"
hyper = { version = "0.14.18", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
im = "15.0.0"
image = "0.24.5"
indexmap = "2.7.0"
indicatif = "0.15.0"
indoc = "1.0.6"
inferno = "0.11.14"
internment = { version = "0.5.0", features = ["arc"] }
ipnet = "2.5.0"
itertools = "0.13"
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", features = [
    "profiling",
    "stats",
    "unprefixed_malloc_on_supported_platforms",
] }
jemalloc-ctl = { package = "tikv-jemalloc-ctl", version = "0.6.0" }
jemalloc-sys = { package = "tikv-jemalloc-sys", version = "0.6.0" }
json-patch = "0.2.6"
jsonwebtoken = "8.1"
jwt = "0.16.0"
lazy_static = "1.4.0"
libc = "0.2.147"
libfuzzer-sys = "0.4.6"
libsecp256k1 = "0.7.0"
libtest-mimic = "0.5.2"
log = "0.4.17"
lru = "0.16.1"
lz4 = "1.28.0"
maplit = "1.0.2"
merlin = "3"
memchr = "2.7.4"
memory-stats = "1.0.0"
mime = "0.3.16"
mini-moka = { version = "0.10.3", features = ["sync"] }
mirai-annotations = "1.12.0"
mockall = "0.11.4"
more-asserts = "0.3.0"
named-lock = "0.2.0"
native-tls = "0.2.10"
neptune = { version = "13.0.0", default-features = false }
ntest = "0.9.3"
num = "0.4.0"
num-bigint = { version = "0.3.2", features = ["rand"] }
num_cpus = "1.13.1"
num-derive = "0.4.2"
num-integer = "0.1.42"
num-traits = "0.2.19"
once_cell = "1.10.0"
open = "5.3.1"
ordered-float = "3.9.1"
ouroboros = "0.15.6"
owo-colors = "3.5.0"
p256 = { version = "0.13.2" }
prettydiff = "0.6.2"
primitive-types = { version = "0.10" }
signature = "2.1.0"
pairing = "0.23"
parking_lot = "0.12.0"
paste = "1.0.7"
pathsearch = "0.2.0"
passkey-authenticator = { version = "0.2.0", features = ["testable"] }
passkey-client = { version = "0.2.0" }
passkey-types = { version = "0.2.0" }
pbjson = "0.5.1"
percent-encoding = "2.1.0"
petgraph = "0.6.5"
pin-project = "1.0.10"
plotters = { version = "0.3.5", default-features = false }
poem = { version = "3.1.3", features = ["anyhow", "compression", "rustls"] }
poem-openapi = { version = "5.1.2", features = ["swagger-ui", "url"] }
poem-openapi-derive = "5.1.1"
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark.git", rev = "6d2487aa1308d9d3860a2b724c485d73095c1c68" }
pprof = { version = "0.11", features = ["flamegraph", "protobuf-codec"] }
pretty = "0.10.0"
pretty_assertions = "1.2.1"
# We set default-features to false so we don't onboard the libpq dep. See more here:
# https://github.com/accudo-labs/accudo-core/pull/12568
processor = { git = "https://github.com/accudo-labs/accudo-indexer-processors-v2.git", tag = "accudo-indexer-processors-v2.1.5", default-features = false }
procfs = "0.14.1"
proc-macro2 = "1.0.38"
project-root = "0.2.2"
prometheus = { version = "0.13.3", default-features = false }
prometheus-http-query = "0.5.2"
prometheus-parse = "0.2.4"
proptest = "1.4.0"
proptest-derive = "0.5.1"
prost = { version = "0.13.4", features = ["no-recursion-limit"] }
prost-types = "0.13.3"
quanta = "0.10.1"
quick_cache = "0.5.1"
quick-junit = "0.5.0"
quote = "1.0.18"
rand = "0.7.3"
rand_core = "0.5.1"
random_word = "0.3.0"
rapidhash = "1.4.0"
rayon = "1.5.2"
redis = { version = "0.22.3", features = [
    "tokio-comp",
    "script",
    "connection-manager",
] }
redis-test = { version = "0.1.1", features = ["aio"] }
ref-cast = "1.0.6"
regex = "1.9.3"
reqwest = { version = "0.11.11", features = [
    "blocking",
    "cookies",
    "json",
    "multipart",
    "stream",
] }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
ring = { version = "0.16.20", features = ["std"] }
ripemd = "0.1.1"
rlimit = "0.10.2"
rocksdb = { version = "0.24.0", features = ["lz4"] }
rsa = { version = "0.9.6" }
rstack-self = { version = "0.3.0", features = ["dw"], default-features = false }
rstest = "0.15.0"
rusty-fork = "0.3.0"
rustversion = "1.0.14"
scopeguard = "1.2.0"
sha2 = "0.9.3"
sha256 = "1.4.0"
sha2_0_10_6 = { package = "sha2", version = "0.10.6" }
sha3 = "0.9.1"
shell-words = "1.0.0"
siphasher = "0.3.10"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = [
    "preserve_order",
    "arbitrary_precision",
] } # Note: arbitrary_precision is required to parse u256 in JSON
serde_repr = "0.1"
serde_merge = "0.1.3"
serde-name = "0.1.1"
serde-generate = { git = "https://github.com/accudo-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
serde-reflection = { git = "https://github.com/accudo-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
serde_with = "3.4.0"
serde_yaml = "0.8.24"
set_env = "1.3.4"
shadow-rs = "0.16.2"
smallbitvec = "2.5.1"
smallvec = "1.8.0"
static_assertions = "1.1.0"
status-line = "0.2.0"
strum = "0.27.1"
strum_macros = "0.27.1"
sugars = "3.0.1"
syn = { version = "1.0.92", features = ["derive", "extra-traits"] }
sysinfo = "0.28.4"
tar = "0.4.40"
tempfile = "3.3.0"
tera = "1.16.0"
termcolor = "1.1.2"
test-case = "3.1.0"
textwrap = "0.15.0"
thiserror = "1.0.37"
threadpool = "1.8.1"
thread_local = "1.1.7"
tiny-bip39 = "0.8.2"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
triomphe = "0.1.14"
trybuild = "1.0.80"
try_match = "0.4.2"
tokio = { version = "1.35.1", features = ["full"] }
tokio-io-timeout = "1.2.0"
tokio-retry = "0.3.0"
tokio-scoped = { version = "0.2.0" }
tokio-stream = { version = "0.1.14", features = ["fs"] }
tokio-test = "0.4.1"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
toml = "0.7.4"
tonic = { version = "0.12.3", features = [
    "tls-roots",
    "transport",
    "prost",
    "gzip",
    "codegen",
    "zstd",
] }
tonic-reflection = "0.12.3"
topological-sort = "0.2.2"
tui = "0.19.0"
typed-arena = "2.0.2"
typenum = "1.17.0"
uint = "0.9.4"
ureq = { version = "1.5.4", features = [
    "json",
    "native-tls",
], default-features = false }
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
variant_count = "1.1.0"
walkdir = "2.3.3"
warp = { version = "0.3.5", features = ["tls"] }
warp-reverse-proxy = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
which = "4.2.5"
whoami = "1.5.0"
# This allows for zeroize 1.6 to be used. Version 1.2.0 of x25519-dalek locks zeroize to 1.3.
x25519-dalek = { git = "https://github.com/accudo-labs/x25519-dalek", rev = "b9cdbaf36bf2a83438d9f660e5a708c82ed60d8e" }
z3tracer = "0.8.0"

# MOVE DEPENDENCIES
move-abigen = { path = "third_party/move/move-prover/move-abigen" }
move-asm = { path = "third_party/move/tools/move-asm" }
move-binary-format = { path = "third_party/move/move-binary-format" }
move-borrow-graph = { path = "third_party/move/move-borrow-graph" }
move-bytecode-source-map = { path = "third_party/move/move-ir-compiler/move-bytecode-source-map" }
move-bytecode-spec = { path = "third_party/move/move-bytecode-spec" }
move-bytecode-verifier = { path = "third_party/move/move-bytecode-verifier" }
move-bytecode-verifier-invalid-mutations = { path = "third_party/move/move-bytecode-verifier/invalid-mutations" }
move-bytecode-viewer = { path = "third_party/move/tools/move-bytecode-viewer" }
move-bytecode-utils = { path = "third_party/move/tools/move-bytecode-utils" }
move-cli = { path = "third_party/move/tools/move-cli" }
move-command-line-common = { path = "third_party/move/move-command-line-common" }
move-coverage = { path = "third_party/move/tools/move-coverage" }
legacy-move-compiler = { path = "third_party/move/move-compiler-v2/legacy-move-compiler" }
move-compiler-v2 = { path = "third_party/move/move-compiler-v2" }
move-core-types = { path = "third_party/move/move-core/types" }
move-decompiler = { path = "third_party/move/tools/move-decompiler" }
move-docgen = { path = "third_party/move/move-prover/move-docgen" }
move-disassembler = { path = "third_party/move/tools/move-disassembler" }
move-errmapgen = { path = "third_party/move/move-prover/move-errmapgen" }
move-ir-types = { path = "third_party/move/move-ir/types" }
move-ir-compiler = { path = "third_party/move/move-ir-compiler" }
move-ir-to-bytecode = { path = "third_party/move/move-ir-compiler/move-ir-to-bytecode" }
move-linter = { path = "third_party/move/tools/move-linter" }
move-model = { path = "third_party/move/move-model" }
move-package = { path = "third_party/move/tools/move-package" }
move-package-cache = { path = "third_party/move/tools/move-package-cache" }
move-package-manifest = { path = "third_party/move/tools/move-package-manifest" }
move-prover = { path = "third_party/move/move-prover" }
move-prover-boogie-backend = { path = "third_party/move/move-prover/boogie-backend" }
move-prover-bytecode-pipeline = { path = "third_party/move/move-prover/bytecode-pipeline" }
move-prover-test-utils = { path = "third_party/move/move-prover/test-utils" }
move-prover-lab = { path = "third_party/move/move-prover/lab" }
accudo-move-stdlib = { path = "accudo-move/framework/move-stdlib" }
accudo-table-natives = { path = "accudo-move/framework/table-natives" }
move-resource-viewer = { path = "third_party/move/tools/move-resource-viewer" }
move-stackless-bytecode = { path = "third_party/move/move-model/bytecode" }
move-stackless-bytecode-test-utils = { path = "third_party/move/move-model/bytecode-test-utils" }
move-symbol-pool = { path = "third_party/move/move-symbol-pool" }
move-table-extension = { path = "third_party/move/extensions/move-table-extension" }
move-transactional-test-runner = { path = "third_party/move/testing-infra/transactional-test-runner" }
move-unit-test = { path = "third_party/move/tools/move-unit-test", features = [
    "table-extension",
] }
move-vm-metrics = { path = "third_party/move/move-vm/metrics" }
move-vm-runtime = { path = "third_party/move/move-vm/runtime" }
move-vm-test-utils = { path = "third_party/move/move-vm/test-utils", features = [
    "table-extension",
] }
move-vm-types = { path = "third_party/move/move-vm/types" }

[profile.release]
debug = true
overflow-checks = true

# The performance build is not currently recommended
# for production deployments. It has not been widely tested.
[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = "thin"
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1

[profile.ci]
inherits = "release"
debug = "line-tables-only"
overflow-checks = true
debug-assertions = true

[profile.bench]
debug = true

[patch.crates-io]
# version 0.6 at commit 444eb13579c733089453806743b19f1ea2dce1c0 did not expose 'run_bench_with_bencher' as a public function, which we need
dudect-bencher = { git = "https://github.com/accudo-labs/dudect-bencher", rev = "9515677c83c58884c1a8c764251753269d46fc0e" }
serde-reflection = { git = "https://github.com/accudo-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
merlin = { git = "https://github.com/accudo-labs/merlin" }
futures = { git = "https://github.com/accudo-labs/futures-rs", branch = "backport" }
futures-channel = { git = "https://github.com/accudo-labs/futures-rs", branch = "backport" }
futures-executor = { git = "https://github.com/accudo-labs/futures-rs", branch = "backport" }
futures-core = { git = "https://github.com/accudo-labs/futures-rs", branch = "backport" }
futures-util = { git = "https://github.com/accudo-labs/futures-rs", branch = "backport" }
futures-sink = { git = "https://github.com/accudo-labs/futures-rs", branch = "backport" }
futures-io = { git = "https://github.com/accudo-labs/futures-rs", branch = "backport" }
futures-task = { git = "https://github.com/accudo-labs/futures-rs", branch = "backport" }
futures-macro = { git = "https://github.com/accudo-labs/futures-rs", branch = "backport" }

# There is a circular dependency between accudo-core, accudo-indexer-processor-sdk, and accudo-indexer-processors-v2,
# so we cannot simply change the version and package for `jemalloc-sys` in one repo without running into conflicts.
# We have to keep this shim until everything uses the same jemalloc dependency.
jemalloc-sys = { git = "https://github.com/accudo-labs/jemalloc-sys-shim", rev = "e0920246dd74303fab9a14b990768c6ac990a59b" }
